logs/bricklayer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bricklayer'...
Compiling './lib/python3.5/site-packages/bricklayer/build_container.py'...
***   File "./lib/python3.5/site-packages/bricklayer/build_container.py", line 52
    print p.stdout.read(), p.stderr.read()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bricklayer/builder.py'...
***   File "./lib/python3.5/site-packages/bricklayer/builder.py", line 137
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bricklayer/builder_deb.py'...
***   File "./lib/python3.5/site-packages/bricklayer/builder_deb.py", line 170
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bricklayer/builder_rpm.py'...
***   File "./lib/python3.5/site-packages/bricklayer/builder_rpm.py", line 166
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bricklayer/config.py'...
***   File "./lib/python3.5/site-packages/bricklayer/config.py", line 34
    print "You need to set BRICKLAYERCONFIG or create /etc/bricklayer/bricklayer.ini"
                                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bricklayer/git.py'...
***   File "./lib/python3.5/site-packages/bricklayer/git.py", line 65
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bricklayer/projects.py'...
***   File "./lib/python3.5/site-packages/bricklayer/projects.py", line 108
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bricklayer/rest.py'...
***   File "./lib/python3.5/site-packages/bricklayer/rest.py", line 39
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bricklayer/utils'...
Listing './lib/python3.5/site-packages/bricklayer/utils/dreque'...
Compiling './lib/python3.5/site-packages/bricklayer/utils/dreque/base.py'...
***   File "./lib/python3.5/site-packages/bricklayer/utils/dreque/base.py", line 54
    except ResponseError, exc:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bricklayer/utils/dreque/worker.py'...
***   File "./lib/python3.5/site-packages/bricklayer/utils/dreque/worker.py", line 57
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bricklayer/utils/pystache'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/mocker.py'...
***   File "./lib/python3.5/site-packages/tests/mocker.py", line 394
    except excClass, e:
                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
